# the_1st_game_cpp

./: CMakeLists.txt  readme.md
inc/: character.hpp  human.hpp  main.hpp
src/: character.cpp  character.hpp  elf.cpp  elf.hpp  entity.hpp  human.cpp  human.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  weapon.cpp  weapon.hpp
weapons/: todo.md
